# semantico_copy

./: README.md  ex.csv
backend/: .gitignore  README.md  pyproject.toml
backend/Design/: data model.graphml
backend/Docker/: Dockerfile  docker-entrypoint.sh
backend/configuration/: advanced.json  advanced_group.json  header.json
backend/output/: H4D9BJ9P_copied.txt  H4D9BJ9P_mine.txt
backend/semantico_backend/collector/pdf_analyzer/: adv_miner.py  miner.py  muminer.py  segmenter.py  slico.py  spoker.py
backend/semantico_backend/collector/pdf_analyzer/sandbox/: annotator.py  boxer.py  muboxer.py  pubchunks.py
backend/semantico_backend/collector/zotero/: adv_interface.py  api_interface.py
backend/semantico_backend/collector/zotero/configuration/: advanced.json  advanced_group.json  basic.json
backend/semantico_backend/controller/: baseController.py  segmentationController.py
backend/tests/: test_miner.py  test_segmenter.py  test_spoker.py  test_zotero.py  test_zotero_adv.py
backend/tests/configuration/: advanced.json  advanced_group.json  spoker.json
docker/: docker-compose.yml
frontend/: .eslintrc  .gitignore  .gitlab-ci.yml  Endpoints.md  README.md  nuxt.config.ts  package.json  playwright.config.ts  tailwind.config.ts
frontend/Docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
frontend/assets/: main.css
frontend/components/: BorderBox.vue  ExternalLink.vue  HMCFooter.vue  HMCHeader.vue  IPButton.vue  InternalLink.vue  MappingItemList.vue  NoScriptMessage.vue  PaginationContainer.vue  (+3 more)
semantico-backend/: pyproject.toml
(+43 files in other folders)
